--- a/ejercicio-teoria-y-flex/index.html
+++ b/ejercicio-teoria-y-flex/index.html
@@ -36,7 +36,7 @@
         <h2>Dada esta regla CSS</h2>
         <img src="cssrule.png" alt="">
         <ol>
-            <li>¿Qué tipo de selector CSS es? <span>Respuesta: Es un selector de...<del>id</del> </span></li>
+            <li>¿Qué tipo de selector CSS es? <span>Respuesta: Es un selector de...<del>clase</del> </span></li>
             <li>¿Cuantas propiedades CSS establece este selector? <span>Respuesta:</span></li>
             <li>¿Cuál es el valor de la segunda propiedad? <span>Respuesta:</span></li>
         </ol>
