--- a/ejercicio-selectores/index.html
+++ b/ejercicio-selectores/index.html
@@ -21,6 +21,21 @@
             body {
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
             }
+
+            p{
+                color: green;
+            }
+
+            .mates{
+                color: blue;
+            }
+            footer p{
+                background-color: yellow;
+            }
+            p:nth-child(even){
+                text-transform: uppercase;
+            }
+
         </style>
     </head>
 
